--- a/site/pseudo-selectors-before.html
+++ b/site/pseudo-selectors-before.html
@@ -6,6 +6,21 @@
 <style>
 /* Styles go here. */
 
+header li{
+  list-style: none;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+  background-color: blue;
+  border: 1px solid gray;
+  color: black;
+  display: block;
+  width: 300px;
+  text-align: center;
+  margin-bottom: 1px; 
+}
+
 </style>
 </head>
 <body>
@@ -20,7 +35,7 @@
 </header>
 
 <section>
-  
+
   <div>DIV 1</div>
   <div>DIV 2</div>
   <div>DIV 3</div>
