a_hover und a_active

--- a/site/pseudo-selectors-before.html
+++ b/site/pseudo-selectors-before.html
@@ -21,6 +21,10 @@ a:link, a:visited {
   margin-bottom: 1px; 
 }
 
+a:hover, a:active {
+  background-color: green;
+  color: purple; 
+}
 </style>
 </head>
 <body>
