nth-child und sections

--- a/site/pseudo-selectors-before.html
+++ b/site/pseudo-selectors-before.html
@@ -25,6 +25,20 @@ a:hover, a:active {
   background-color: green;
   color: purple; 
 }
+
+header li:nth-child(3) {
+  font-size: 30px;
+}
+
+section div:nth-child(odd) {
+  background-color: red;
+}
+
+section div:nth-child(4):hover {
+  background-color: yellow;
+  cursor:pointer;
+}
+
 </style>
 </head>
 <body>
