--- a/site/pseudo-selectors-before.html
+++ b/site/pseudo-selectors-before.html
@@ -47,8 +47,8 @@ section div:nth-child(4):hover {
 <header>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="http://goo.gl/V0Wl6s" target="_blank">AngularJS Course</a></li>
-    <li><a href="http://www.facebook.com/CourseraWebDev" target="_blank">Facebook Fan Page</a></li>
+    <li><a href="https://www.facebook.com/ricardosaid.martinez" target="_blank">AngularJS Course</a></li>
+    <li><a href="https://www.facebook.com/ricardosaid.martinez" target="_blank">Facebook Fan Page</a></li>
   </ul>
 </header>
 
